--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 <body>
 
 	<div class="sidenav-right">
-		<span id="project"><a href="index.html">Projets</a></span><span id="about"><a href="about.html">Infos</a></span><span id="email"><a href=mailto:allo@karinebelanger.design>allo@karinebelanger.design</a></span><span id="phone">1&nbsp;(581)&nbsp;246&nbsp;4787</span>
+		<span id="project"><a href="index.html">Projets</a></span><span id="about"><a href="about.html">Infos</a></span><span id="email"><a href=mailto:allo@karinebelanger.design>allo@karinebelanger.design</a></span><span id="phone"><a href="tel:1-581-246-4787">1&nbsp;(581)&nbsp;246&nbsp;4787</a></span>
 	</div>
 
 	<div class="sidenav-left">
