--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
 	<div class="sidenav-right">
-		<span id="project"><a href="index.html">Projets</a></span><span id="about"><a href="about.html">Infos</a></span><span id="email"><a href="mailto:allo@karinebelanger.design">allo@karinebelanger.design</a></span><span id="phone">1&nbsp;(581)&nbsp;246&nbsp;4787</span>
+		<span id="project"><a href="index.html">Projets</a></span><span id="about"><a href="about.html">Infos</a></span><span id="email"><a href="mailto:allo@karinebelanger.design">allo@karinebelanger.design</a></span><span id="phone"><a href="tel:1-581-246-4787">1&nbsp;(581)&nbsp;246&nbsp;4787</a></span>
 	</div>
 
 	<div class="sidenav-left">
@@ -36,12 +36,12 @@
 
 	<!-- MOIS DE LA POÉSIE -->
 
-		<div id="poesie-booklet"><img src="images/poesie02.png"></div>
-		<div id="poesie-purple"><img src="images/poesie03.png"></div>
-		<div id="poesie-red"><img src="images/poesie04.png"></div>
-		<div id="poesie-yellow"><img src="images/poesie05.png"></div>
-		<div id="poesie-blue"><img src="images/poesie06.png"></div>
-		<div id="poesie-green"><img src="images/poesie07.png"></div>
+		<div id="poesie-booklet"><img src="images/poesie02.jpg"></div>
+		<div id="poesie-purple"><img src="images/poesie03.jpg"></div>
+		<div id="poesie-red"><img src="images/poesie04.jpg"></div>
+		<div id="poesie-yellow"><img src="images/poesie05.jpg"></div>
+		<div id="poesie-blue"><img src="images/poesie06.jpg"></div>
+		<div id="poesie-green"><img src="images/poesie07.jpg"></div>
 
 
 	<!-- FLYERS ÉTÉ -->
@@ -71,7 +71,7 @@
 	<!-- BIBLE QUÉBECOISE -->
 
 		<div id="bible-clou"><img src="images/bible01b.png"></div>
-		<div id="bible-canard"><img src="images/bible03b.png"></div>
+		<div id="bible-canard"><img src="images/bible03b.jpg"></div>
 		<div id="bible-closed"><img src="images/bible02b.png"></div>
 		<div id="bible-collage"><img src="images/bible04.png"></div>
 
