Update: Pictures & Links

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 		<!--<img src="images/about" id='photo'>-->
 
 		<div class="intro">
-			<p id="intro">Sympathique designer graphique québecoise nouvellement installée à Paris, étonnante conceptrice de salades de pâtes, siffleuse aguerrie et enthousiaste claquettiste.</p>
+			<p id="intro">Sympathique designer graphique québecoise s'installant prochainement à Paris, étonnante conceptrice de salades de pâtes, siffleuse aguerrie et enthousiaste claquettiste.</p>
 		</div>
 
 		<!-- <img src="images/me3.png" id="photo"> -->
@@ -73,13 +73,13 @@
 
 		<div id="paragon">
 			<h3>Paragon Faction</h3>
-			<span class="year">11/2018 - présent, Montréal</span>
+			<span class="year">11/2018 - 10/2019</span>
 			<h4>Designer Graphique & UX</h4>
 		</div>
 
 		<div id="autonome">
 			<h3>Freelance</h3>
-			<span class="year">09/2016 - présent, Québec & Montréal</span>
+			<span class="year">09/2016 - présent</span>
 			<h4>Designer Graphique et Motion</h4>
 		</div>
 
@@ -103,7 +103,7 @@
 		<div id="esag">
 			<h3>Penninghen</h3>
 			<span class="year">01/2016 - 06/2016, Paris</span>
-			<h4>Semestre d'échange Erasmus, Master 1 en Direction Artistique</h4>
+			<h4>Semestre d'échange Erasmus, Master 1 en Direction Artistique.</h4>
 		</div>
 
 		<div id="asap">
@@ -124,7 +124,7 @@
 					<li>Compétences en photographie, retouche photo, capture vidéo, motion design et montage.</li>
 					<li>Connaissances de base en HTML et CSS.</li>
 					<li>Amoureuse du travail d'équipe.</li>
-					<li>Léger bagage en design d'expérience utilisateur.</li>
+					<li>Léger baggage en design d'expérience utilisateur.</li>
 				</ul>
 			</h4>
 		</div>
