--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<!-- MARATHON D'ÉCRITURE -->
 
-		<div id="marathon-wall"><img src="images/marathon01.png"></div>
+		<div id="marathon-wall"><img src="images/marathon01.jpg"></div>
 
 
 	<!-- TRUMP -->
