Update Links Phone
Fuck it.

--- a/about.html
+++ b/about.html
@@ -67,25 +67,25 @@
 
 		<div id="ulule">
 			<h3>Ulule</h3>
-			<span class="year">06/2017 - 12/2018, Montréal</span>
+			<span class="year">06/2017 à 12/2018, Montréal</span>
 				<h4>Designer Graphique et Motion
 		</div>
 
 		<div id="paragon">
 			<h3>Paragon Faction</h3>
-			<span class="year">11/2018 - 10/2019</span>
+			<span class="year">11/2018 à 10/2019</span>
 			<h4>Designer Graphique & UX</h4>
 		</div>
 
 		<div id="autonome">
 			<h3>Freelance</h3>
-			<span class="year">09/2016 - présent</span>
+			<span class="year">Depuis 09/2016</span>
 			<h4>Designer Graphique et Motion</h4>
 		</div>
 
 		<div id="imedia">
 			<h3>Imédia</h3>
-			<span class="year">05/2015 - 09/2015, Québec</span>
+			<span class="year">05/2015 à 09/2015, Québec</span>
 			<h4>Stagiaire en design graphique</h4>
 		</div>
 
@@ -96,13 +96,13 @@
 
 		<div id="ulaval">
 			<h3> École de Design de l'Université Laval</h3>
-			<span class="year">09/2013 - 04/2017, Québec</span>
+			<span class="year">09/2013 à 04/2017, Québec</span>
 			<h4>Bacclauréat en Design Graphique, mention implication scolaire et profil international.</h4>
 		</div>
 
 		<div id="esag">
 			<h3>Penninghen</h3>
-			<span class="year">01/2016 - 06/2016, Paris</span>
+			<span class="year">01/2016 à 06/2016, Paris</span>
 			<h4>Semestre d'échange Erasmus, Master 1 en Direction Artistique.</h4>
 		</div>
 
